dist/1.0/bin/sample/retrieveUnpackaged/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Billing_End_Date__c</fullName>
        <description>Billing End Date</description>
        <inlineHelpText>Billing End Date</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <description>Billing Start Date</description>
        <inlineHelpText>Billing Start Date</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Status_of_Service__c</fullName>
        <description>Status of the service in Billing</description>
        <inlineHelpText>Status of the service in Billing</inlineHelpText>
        <label>Billing Status of Service</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CProduct__c</fullName>
        <description>Related Product (custom)</description>
        <inlineHelpText>Related Product (custom)</inlineHelpText>
        <label>Product (custom)</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional comments</description>
        <inlineHelpText>Additional comments</inlineHelpText>
        <label>Comments</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Service_Date__c</fullName>
        <description>End date of a service</description>
        <inlineHelpText>End date of a service</inlineHelpText>
        <label>End Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_fee__c</fullName>
        <description>Installation fee</description>
        <inlineHelpText>Installation fee</inlineHelpText>
        <label>Installation fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Timestamp from integration system</description>
        <inlineHelpText>Timestamp from integration system</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monthly_fee__c</fullName>
        <description>Monthly fee</description>
        <inlineHelpText>Monthly fee</inlineHelpText>
        <label>Monthly fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Related Opportunity</description>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductInstanceId__c</fullName>
        <description>Installed product instance ID from CSR</description>
        <inlineHelpText>Installed product instance ID from CSR</inlineHelpText>
        <label>ProductInstanceId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_to_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for AccountInstalledProducts VF page. Used only there.</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Selected to Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Recor__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Service_Date__c</fullName>
        <description>Start date of service</description>
        <inlineHelpText>Start date of service</inlineHelpText>
        <label>Start Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Usage_fee__c</fullName>
        <description>Usage fee</description>
        <inlineHelpText>Usage fee</inlineHelpText>
        <label>Usage fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
</CustomObject>